@startuml
skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}



class CategoryList {
    - categories : ArrayList<Category>
}

note top of CategoryList
Additional attributes such as dependencies and other
task-specific properties are omitted for simplicity.
end note

class Category {
    - name : String
    - todoList : TodoList
    - deadlineList : DeadlineList
    - eventList : EventList
}

class TodoList
class DeadlineList
class EventList

class Todo
class Deadline
class Event

' Relationships
CategoryList *-- "*" Category
Category *-- "1" TodoList
Category *-- "1" DeadlineList
Category *-- "1" EventList

TodoList *-- "*" Todo
DeadlineList *-- "*" Deadline
EventList *-- "*" Event

' Inheritance
abstract class "{abstract}\nTask" as Task
Task <|-- Todo
Task <|-- Deadline
Task <|-- Event

abstract class "{abstract}\nTaskList" as TaskList
TaskList <|-- TodoList
TaskList <|-- DeadlineList
TaskList <|-- EventList


@enduml